--- a/Mer1/appsettings.json
+++ b/Mer1/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ASPNET_WebDB": "Server=DESKTOP-5BC4O5I;Database=LearningDB;Trusted_Connection=true;TrustServerCertificate=true"
+  }
+
 }
